--- a/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - Tabular EDA.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "      <td>2015-02-18</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>AAPL</td>\n",
        "      <td>Apple Inc. (Apple) designs, manufactures and m...</td>\n",
        "      <td>APPLE INC</td>\n",
@@ -170,7 +170,7 @@
        "      <td>2015-02-18</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>AAPL</td>\n",
        "      <td>Apple Inc. (Apple) designs, manufactures and m...</td>\n",
        "      <td>APPLE INC</td>\n",
@@ -194,7 +194,7 @@
        "      <td>2015-05-28</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>AAPL</td>\n",
        "      <td>Apple Inc. (Apple) designs, manufactures and m...</td>\n",
        "      <td>APPLE INC</td>\n",
@@ -218,7 +218,7 @@
        "      <td>2015-08-25</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>AAPL</td>\n",
        "      <td>Apple Inc. (Apple) designs, manufactures and m...</td>\n",
        "      <td>APPLE INC</td>\n",
@@ -266,7 +266,7 @@
        "      <td>2015-11-03</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>ZTS</td>\n",
        "      <td>Zoetis Inc. is focused on the discovery, devel...</td>\n",
        "      <td>ZOETIS INC</td>\n",
@@ -290,7 +290,7 @@
        "      <td>2016-01-22</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>ZTS</td>\n",
        "      <td>Zoetis Inc. is focused on the discovery, devel...</td>\n",
        "      <td>ZOETIS INC</td>\n",
@@ -314,7 +314,7 @@
        "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>ZTS</td>\n",
        "      <td>Zoetis Inc. is focused on the discovery, devel...</td>\n",
        "      <td>ZOETIS INC</td>\n",
@@ -338,7 +338,7 @@
        "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>ZTS</td>\n",
        "      <td>Zoetis Inc. is focused on the discovery, devel...</td>\n",
        "      <td>ZOETIS INC</td>\n",
@@ -362,7 +362,7 @@
        "      <td>2016-12-23</td>\n",
        "      <td>...</td>\n",
        "      <td>Same As Last Fixed Quarter Date</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>ZTS</td>\n",
        "      <td>Zoetis Inc. is focused on the discovery, devel...</td>\n",
        "      <td>ZOETIS INC</td>\n",
@@ -432,16 +432,16 @@
        "\n",
        "     Change Since Last Fixed Quarter Date Ticker  \\\n",
        "0                                     NaN   AAPL   \n",
-       "1                                     0.0   AAPL   \n",
-       "2                                     0.0   AAPL   \n",
-       "3                                     0.0   AAPL   \n",
-       "4                                     0.0   AAPL   \n",
+       "1                                    0.00   AAPL   \n",
+       "2                                    0.00   AAPL   \n",
+       "3                                    0.00   AAPL   \n",
+       "4                                    0.00   AAPL   \n",
        "...                                   ...    ...   \n",
-       "7329                                  0.0    ZTS   \n",
-       "7330                                  0.0    ZTS   \n",
-       "7331                                  0.0    ZTS   \n",
-       "7332                                  0.0    ZTS   \n",
-       "7333                                  0.0    ZTS   \n",
+       "7329                                 0.00    ZTS   \n",
+       "7330                                 0.00    ZTS   \n",
+       "7331                                 0.00    ZTS   \n",
+       "7332                                 0.00    ZTS   \n",
+       "7333                                 0.00    ZTS   \n",
        "\n",
        "                                            Description Company Name  \\\n",
        "0     Apple Inc. (Apple) designs, manufactures and m...    APPLE INC   \n",
@@ -511,7 +511,7 @@
        "[7334 rows x 171 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2983,7 @@
        "Change Since Last Fixed Quarter Date                         0.26  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3002,7 +3002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3013,7 +3013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3022,7 @@
        "1"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3035,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -3044,7 +3044,7 @@
        "536"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3063,7 +3063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -3140,7 +3140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -3170,7 +3170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -3202,7 +3202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -3234,7 +3234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -3646,7 +3646,7 @@
        "[376 rows x 176 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3663,7 +3663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -3917,7 +3917,7 @@
        "7241    XIN 2016-04-01"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3937,7 +3937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -4239,7 +4239,7 @@
        "1681    AMD  2016-04-27    web  2016        4"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4261,7 +4261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -4365,7 +4365,7 @@
        "7241    XIN 2016-04-01"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4412,7 +4412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -4461,7 +4461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -4523,7 +4523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -4535,7 +4535,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4554,7 +4554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -4590,7 +4590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -4633,14 +4633,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1744\\4236663331.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1744\\949429418.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n"
      ]
     },
@@ -4721,9 +4721,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>common_plus_preferred_stock</td>\n",
-       "      <td>7334</td>\n",
-       "      <td>2.179639</td>\n",
+       "      <td>marketCap</td>\n",
+       "      <td>6892</td>\n",
+       "      <td>137.757757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -4736,20 +4736,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                          Item Count  Percent_of_Total_Assets\n",
-       "0                  totalAssets  7259               100.000000\n",
-       "0      totalCurrentLiabilities  7258                18.830477\n",
-       "0             totalLiabilities  7258                61.412873\n",
-       "0                  totalEquity  7334                33.644424\n",
-       "0             retainedEarnings  7334                21.894578\n",
-       "0           totalCurrentAssets  7259                26.955171\n",
-       "0                      revenue  7170                17.810744\n",
-       "0                         EBIT  7170                 1.879150\n",
-       "0  common_plus_preferred_stock  7334                 2.179639\n",
-       "0               workingCapital  7233                 7.947861"
+       "                      Item Count  Percent_of_Total_Assets\n",
+       "0              totalAssets  7259               100.000000\n",
+       "0  totalCurrentLiabilities  7258                18.830477\n",
+       "0         totalLiabilities  7258                61.412873\n",
+       "0              totalEquity  7334                33.644424\n",
+       "0         retainedEarnings  7334                21.894578\n",
+       "0       totalCurrentAssets  7259                26.955171\n",
+       "0                  revenue  7170                17.810744\n",
+       "0                     EBIT  7170                 1.879150\n",
+       "0                marketCap  6892               137.757757\n",
+       "0           workingCapital  7233                 7.947861"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4764,7 +4764,7 @@
     "# Loop over each variable\n",
     "# Drop missing or infinite values\n",
     "# Compute count and mean\n",
-    "for variable in ['totalAssets', 'totalCurrentLiabilities', 'totalLiabilities', 'totalEquity', 'retainedEarnings', 'totalCurrentAssets', 'revenue', 'EBIT', 'common_plus_preferred_stock', 'workingCapital']:\n",
+    "for variable in ['totalAssets', 'totalCurrentLiabilities', 'totalLiabilities', 'totalEquity', 'retainedEarnings', 'totalCurrentAssets', 'revenue', 'EBIT', 'marketCap', 'workingCapital']:\n",
     "    var_count = df[variable].replace([np.inf, -np.inf], np.nan).dropna().count()\n",
     "    var_mean = df[variable].replace([np.inf, -np.inf], np.nan).dropna().mean()\n",
     "    table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n",
@@ -4774,7 +4774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -4889,7 +4889,7 @@
        "Altman_Z 6,648.00  2.36 4.24 -0.82 1.00 1.62 2.48 40.36"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
