winsorized ratio c more aggressively closes #46

--- a/Code/Data Loading and Cleaning/Tabular Financial/Combine and Clean Tabular Financial Statements Data.ipynb
+++ b/Code/Data Loading and Cleaning/Tabular Financial/Combine and Clean Tabular Financial Statements Data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[10 rows x 124 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "[22448 rows x 124 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
        "12     AA 2010-01-13 6,977,280,000.00"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        "[22448 rows x 125 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
        "<Axes: xlabel='reportedCurrency'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3758,7 +3758,7 @@
        "marketCap                                       45,183,528,491.83  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3778,7 +3778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3862,7 +3862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3872,7 +3872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3898,7 +3898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -6026,7 +6026,7 @@
        "marketCap                                     40,438,906,611.81  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6046,7 +6046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6056,7 +6056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6089,7 +6089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -6146,7 +6146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\2290044570.py:35: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\2290044570.py:35: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['EBIT'] = corrected['ebitda'] - corrected['depreciationAndAmortization_income_statement']\n"
      ]
     }
@@ -6200,16 +6200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\3035843423.py:4: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\3035843423.py:4: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['common_plus_preferred_stock'] = corrected['commonStock'] + corrected['preferredStock']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\3035843423.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\3035843423.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['workingCapital'] = corrected['totalCurrentAssets'] - corrected['totalCurrentLiabilities']\n"
      ]
     }
@@ -6237,22 +6237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\238543792.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\238543792.py:2: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['Ratio_A'] = corrected['EBIT'] / corrected['totalAssets']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\238543792.py:5: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\238543792.py:5: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['Ratio_B'] = corrected['revenue'] / corrected['totalAssets']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\238543792.py:10: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\238543792.py:10: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['Ratio_C'] = (corrected['marketCap']) / corrected['totalLiabilities']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\238543792.py:12: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\238543792.py:12: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['Ratio_D'] = corrected['workingCapital'] / corrected['totalAssets']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20872\\238543792.py:14: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_26932\\238543792.py:14: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  corrected['Ratio_E'] = corrected['retainedEarnings'] / corrected['totalAssets']\n"
      ]
     }
@@ -6276,7 +6276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6286,7 +6286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -6389,7 +6389,7 @@
        "Ratio_E 20,312.00  29.59  4,862.33 -5,269.86 0.00 0.16 0.37   692,819.58"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6401,6 +6401,40 @@
     "pd.options.display.float_format = '{:,.2f}'.format\n",
     "sum_stats_ratios = corrected[['Ratio_A', 'Ratio_B', 'Ratio_C', 'Ratio_D', 'Ratio_E']].describe().T\n",
     "sum_stats_ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.90           4.72\n",
+       "0.91           5.04\n",
+       "0.92           5.59\n",
+       "0.93           6.32\n",
+       "0.94           7.30\n",
+       "0.95           8.77\n",
+       "0.96          11.15\n",
+       "0.97          16.61\n",
+       "0.98         428.43\n",
+       "0.99       1,906.32\n",
+       "1.00   7,682,958.05\n",
+       "Name: Ratio_C, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# every 10th percentile of Ratio_C\n",
+    "corrected['Ratio_C'].quantile([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9])\n",
+    "# check 90th through 100th percentile of Ratio_C\n",
+    "corrected['Ratio_C'].quantile([0.9, 0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99, 1])"
    ]
   },
   {
@@ -6417,17 +6451,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Altman Z-Score\n",
     "\n",
     "# Winsorize tricky ratios - 2.5% and 97.5%\n",
+    "# More aggressive winsorization for Ratio_C - 5% and 95%\n",
     "cols_to_clip = ['Ratio_A', 'Ratio_B', 'Ratio_C', 'Ratio_D', 'Ratio_E']\n",
     "#cols_to_clip = ['Ratio_A', 'Ratio_B', 'Ratio_E']\n",
     "for column in cols_to_clip:\n",
-    "    corrected[column] = corrected[column].clip(lower=corrected[column].quantile(0.025), upper=corrected[column].quantile(0.975))\n",
+    "    if column == 'Ratio_C':\n",
+    "        corrected[column] = corrected[column].clip(lower=corrected[column].quantile(0.05), upper=corrected[column].quantile(0.95))\n",
+    "    else:\n",
+    "        corrected[column] = corrected[column].clip(lower=corrected[column].quantile(0.025), upper=corrected[column].quantile(0.975))\n",
     "\n",
     "# To avoid multicollinearity, be sure to drop ratios if using Z-Score in a model\n",
     "corrected['Altman_Z'] = 3.3 * corrected['Ratio_A'] + 0.99 * corrected['Ratio_B'] + 0.6 * corrected['Ratio_C'] + 1.2 * corrected['Ratio_D'] + 1.4 * corrected['Ratio_E']"
@@ -6435,7 +6473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6495,13 +6533,13 @@
        "    <tr>\n",
        "      <th>Ratio_C</th>\n",
        "      <td>17,703.00</td>\n",
-       "      <td>3.63</td>\n",
-       "      <td>9.79</td>\n",
-       "      <td>0.19</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>2.09</td>\n",
+       "      <td>0.29</td>\n",
        "      <td>0.78</td>\n",
        "      <td>1.44</td>\n",
        "      <td>2.66</td>\n",
-       "      <td>62.47</td>\n",
+       "      <td>8.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ratio_D</th>\n",
@@ -6528,29 +6566,29 @@
        "    <tr>\n",
        "      <th>Altman_Z</th>\n",
        "      <td>16,983.00</td>\n",
-       "      <td>2.51</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>-0.93</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>-0.87</td>\n",
        "      <td>0.98</td>\n",
        "      <td>1.64</td>\n",
        "      <td>2.62</td>\n",
-       "      <td>40.36</td>\n",
+       "      <td>8.14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             count  mean  std   min  25%  50%  75%   max\n",
-       "Ratio_A  19,793.00  0.02 0.02 -0.02 0.01 0.02 0.03  0.08\n",
-       "Ratio_B  19,793.00  0.22 0.16  0.04 0.10 0.18 0.29  0.73\n",
-       "Ratio_C  17,703.00  3.63 9.79  0.19 0.78 1.44 2.66 62.47\n",
-       "Ratio_D  20,075.00  0.14 0.16 -0.12 0.02 0.11 0.24  0.57\n",
-       "Ratio_E  20,312.00  0.19 0.32 -0.64 0.00 0.16 0.37  1.02\n",
-       "Altman_Z 16,983.00  2.51 4.50 -0.93 0.98 1.64 2.62 40.36"
+       "             count  mean  std   min  25%  50%  75%  max\n",
+       "Ratio_A  19,793.00  0.02 0.02 -0.02 0.01 0.02 0.03 0.08\n",
+       "Ratio_B  19,793.00  0.22 0.16  0.04 0.10 0.18 0.29 0.73\n",
+       "Ratio_C  17,703.00  2.15 2.09  0.29 0.78 1.44 2.66 8.77\n",
+       "Ratio_D  20,075.00  0.14 0.16 -0.12 0.02 0.11 0.24 0.57\n",
+       "Ratio_E  20,312.00  0.19 0.32 -0.64 0.00 0.16 0.37 1.02\n",
+       "Altman_Z 16,983.00  2.01 1.49 -0.87 0.98 1.64 2.62 8.14"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6573,7 +6611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
