--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -197,21 +197,21 @@
    "source": [
     "# Load ~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\calls.csv\n",
     "if DEBUG:\n",
-    "    calls = pd.read_csv(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\calls.csv', nrows = 10)\n",
+    "    calls = pd.read_parquet(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\combined_calls.parquet', nrows = 10)\n",
     "else:\n",
-    "    calls = pd.read_csv(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\combined_calls.csv')\n",
+    "    calls = pd.read_parquet(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\combined_calls.parquet')\n",
     "# Delete the first column (index)\n",
     "#calls = calls.iloc[:,1:]\n",
     "# rename symbol to company\n",
     "calls = calls.rename(columns = {'symbol':'company'})\n",
     "# Convert date to be just the date part\n",
-    "calls['date'] = calls['date'].str[:10]\n",
+    "#calls['date'] = calls['date'].str[:10]\n",
     "print(calls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -238,13 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'str'>\n",
+      "<class 'datetime.date'>\n",
+      "<class 'datetime.date'>\n",
+      "<class 'datetime.date'>\n",
       "date range\n",
       "2010-05-03\n",
       "2016-09-30\n",
@@ -669,14 +673,19 @@
        "[7981 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# convert earnings_call_date to date part\n",
-    "cr_and_dates['earnings_call_date'] = cr_and_dates['earnings_call_date'].str[:10]\n",
+    "print(type(cr_and_dates['earnings_call_date'][0]))\n",
+    "print(type(calls['date'][0]))\n",
+    "cr_and_dates['earnings_call_date'] = pd.to_datetime(cr_and_dates['earnings_call_date']).dt.date\n",
+    "#calls['date'] = pd.to_datetime(calls['date'])\n",
+    "print(type(cr_and_dates['earnings_call_date'][0]))\n",
+    "print(type(calls['date'][0]))\n",
     "\n",
     "# Inner join cr_and_dates (on columns ticker, earnings_call_date) with calls.csv (on columns company, date)\n",
     "merged = pd.merge(cr_and_dates, calls, left_on=['ticker', 'earnings_call_date'], right_on=['company', 'date'], how='inner')\n",
@@ -705,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1087,7 @@
        "9                                    AA  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1525,7 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 7334 entries, 0 to 7333\n",
       "Columns: 171 entries, ticker to Comment\n",
-      "dtypes: bool(2), datetime64[ns](1), float64(114), int32(1), int64(9), object(44)\n",
+      "dtypes: bool(2), datetime64[ns](2), float64(114), int32(1), int64(9), object(43)\n",
       "memory usage: 9.4+ MB\n",
       "None\n",
       "Index(['ticker', 'fixed_quarter_date', 'earnings_call_date', 'Rating',\n",
@@ -1540,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1550,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
