--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "[7981 rows x 24 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "9                                    AA  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,13 @@
       "C                       0  16   0    0     0     0     0     0    0    0\n",
       "CC                      0   0  14    0     0     0     0     0    0    0\n",
       "CCC                     0   0   0  185     0     0     0     0    0    0\n",
-      "D                       9   0   0    0     0     0     0     0    0    0\n",
+      "D                       9   0   0    0     0     0     0     0    0    0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "rating_on_previous_fixed_quarter_date AAA is 10  1.0   2.0   3.0   4.0   5.0   \\\n",
       "rating_on_previous_fixed_quarter_date                                           \n",
       "A                                                   0     0     0     0     0   \n",
@@ -1174,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2231,12 +2237,14 @@
     "        piece.to_parquet(r'../../../Data/All_Data/All_Data_Fixed_Quarter_Dates/all_data_fixed_quarter_dates_piece_' + str(i) + '.parquet', index=False)\n",
     "        print(piece.head(5))\n",
     "        print(len(piece))\n",
-    "        total_len_pieces += len(piece)\n"
+    "        total_len_pieces += len(piece)\n",
+    "    # save 100 row sample\n",
+    "    merged.sample(100).to_parquet(r'../../../Data/All_Data/All_Data_Fixed_Quarter_Dates_Sample/all_data_fixed_quarter_dates_sample.parquet', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
