--- a/Code/Exploratory Data Analysis/Earning Calls/Earnings_Call_EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Earning Calls/Earnings_Call_EDA.ipynb
@@ -124,7 +124,7 @@
    ],
    "source": [
     "# Load the data\n",
-    "df = pd.read_csv(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\calls_short.csv')\n",
+    "df = pd.read_csv(r'~\\Box\\STAT 222 Capstone\\Intermediate Data\\Calls\\calls_short.csv')\n",
     "df.head()"
    ]
   },
